--- a/app/views/pictures/index.html.erb
+++ b/app/views/pictures/index.html.erb
@@ -1,1 +1,5 @@
 <h1>Pictures</h1>
+<% @pictures.each do |picture| %>
+<p><%= picture.title%></p> <p><%= picture.artist %></p>
+<img src="<%= picture.url %>" >
+<% end %>
