Refactoring views to usehelpers and adding navigation

--- a/app/views/pictures/show.html.erb
+++ b/app/views/pictures/show.html.erb
@@ -1,2 +1,3 @@
+<%= link_to "Back to Pictures", pictures_url %>
 <p><%= @pictures.title %>, <%= @pictures.artist %></p>
-<img src="<%= @pictures.url %>">
+<%= image_tag @pictures.url %>
