--- a/app/views/pictures/show.html.erb
+++ b/app/views/pictures/show.html.erb
@@ -1,3 +1,3 @@
-<%= link_to "Back to Pictures", pictures_url %>
+<%= link_to "Back to Pictures", pictures_url %> | <%= link_to "Edit", edit_picture_path(@pictures) %>
 <p><%= @pictures.title %>, <%= @pictures.artist %></p>
 <%= image_tag @pictures.url %>
