--- a/app/views/pictures/show.html.erb
+++ b/app/views/pictures/show.html.erb
@@ -1,5 +1,4 @@
-<!-- <%= link_to "Back to Pictures", pictures_url %> | <%= link_to "Edit", edit_picture_path(@pictures) %> -->
-<%= link_to "Back to Pictures", pictures_url %> | <%= link_to "Edit", edit_picture_path(@pictures) %> | <%= link_to "Delete", delete_picture_path(@pictures), method: :delete, data: {confirm: "Are you sure you want to delete this picture?"}  %>
+<%= link_to "Back to Pictures", pictures_url %> | <%= link_to "Edit", edit_picture_path(@pictures) %> | <%= link_to "Delete", @pictures, method: :delete, data: {confirm: "Are you sure you want to delete this picture?"}  %>
 
 <p><%= @pictures.title %>, <%= @pictures.artist %></p>
 <%= image_tag @pictures.url %>
